[project]
name = "japanese-battery-controller-echonet"
version = "0.1.0"
description = "Python library for discovering and controlling Japanese battery systems and energy management devices using the ECHONET Lite protocol"
readme = "README.md"
authors = [
    { name = "Fraser Tooth", email = "fraser.tooth@kraken.tech" }
]
requires-python = ">=3.9"
dependencies = [
    "pychonet>=2.6.16",
]

[project.scripts]
japanese-battery-controller-echonet = "japanese_battery_controller_echonet:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "ruff>=0.12.9",
]
